moving data layer tooltips over a bit to the right.  refactoring vector attribution events code. adding some placeholder code for styling the vector layers.  fixing the scrollbar (a bit ghetto) in the data layers accordion.  adding another, larger vector layer (boem protraction boundaries).

--- a/media/marco-proto/assets/css/style.css
+++ b/media/marco-proto/assets/css/style.css
@@ -95,7 +95,7 @@ body {
 }
 
 #data-accordion, #legend-accordion {
-  height: 400px;
+  height: 100%;
   overflow-y: auto;
 }
 
